kubernetes/apps/goatcounter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goatcounter
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
