kubernetes/apps/goatcounter/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goatcounter
  namespace: goatcounter
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "goatcounter.robin-vidal.com"
  rules:
    - backendRefs:
        - name: goatcounter
          port: 8080
